# POSIX-threads-example

./: CMakeLists.txt  Client.cpp  Client.h  Delay.h  Generator.cpp  Generator.h  Hairdresser.cpp  Hairdresser.h  HairdresserService.cpp  HairdresserService.h  Kasa.cpp  Kasa.h  KasaService.cpp  KasaService.h  Sofa.cpp  Sofa.h  SofaService.cpp  SofaService.h  ThreadManager.h  Waiting_Room.cpp  Waiting_Room.h  Waiting_RoomService.cpp  Waiting_RoomService.h  main.cpp
